--- a/CustomMacroBase/CustomControlEx/ComboBoxEx/cComboBox_style.xaml
+++ b/CustomMacroBase/CustomControlEx/ComboBoxEx/cComboBox_style.xaml
@@ -53,7 +53,7 @@
                                    HorizontalAlignment="Left" Margin="3,3,23,3" 
                                    VerticalAlignment="Center"
                                    Text="{TemplateBinding SelectionBoxItem, Converter={StaticResource cComboBox_converter_content2string}}" 
-                                   Foreground="{StaticResource ContentSite.Foreground}" 
+                                   Foreground="{TemplateBinding Foreground}" 
                                    IsHitTestVisible="False"/>
                         
                         <!-- The TextBox must be named PART_EditableTextBox or ComboBox will not recognize it -->
@@ -63,7 +63,7 @@
                               Data="M52.335 261.072c-31.269 30.397-31.269 79.722 0 110.194l403.212 391.718c31.325 30.382 82.114 30.382 113.377 0l403.197-391.718c31.325-30.466 31.325-79.793 0-110.194-31.28-30.449-82.058-30.449-113.39 0l-346.497 336.64-346.457-336.64c-31.325-30.448-82.105-30.448-113.446 0l0 0z"
                               Margin="4" Stretch="Fill" VerticalAlignment="Center" HorizontalAlignment="Right"
                               Width="13" Height="8"
-                              Fill="{StaticResource Arrow.Fill}" Opacity="0.65" IsHitTestVisible="False">
+                              Fill="{TemplateBinding Foreground}" Opacity="0.65" IsHitTestVisible="False">
                         </Path>
 
                         <!-- The Popup shows the list of items in the ComboBox. IsOpen is databound to IsDropDownOpen which is toggled via the ComboBoxToggleButton -->
@@ -106,10 +106,10 @@
 
                         <Trigger Property="IsMouseOver" Value="true">
                             <Setter Property="Opacity" TargetName="Arrow" Value="0.95"/>
-                            <Setter Property="Fill" TargetName="Arrow" Value="{StaticResource Arrow.Fill.MouseOver}"/>
+                            <Setter Property="Fill" TargetName="Arrow" Value="White"/>
+                            <Setter Property="Foreground" TargetName="ContentSite" Value="White"/>
                             <Setter Property="Background" TargetName="Body" Value="{StaticResource Body.Background.MouseOver}"/>
                             <Setter Property="BorderBrush" TargetName="Body" Value="{StaticResource Body.BorderBrush.MouseOver}"/>
-                            <Setter Property="Foreground" TargetName="ContentSite" Value="{StaticResource ContentSite.Foreground.MouseOver}"/>
                         </Trigger>
                         <Trigger Property="IsKeyboardFocused" Value="true">
                             
@@ -133,8 +133,15 @@
                                             BorderBrush="#80000000"
                                             BorderThickness="1" 
                                             CornerRadius="2.5"
-                                            Opacity="1.0"/>
-                                    <ContentPresenter Margin="2,0,2,0"/>
+                                            Padding="3,0,3,1">
+                                        <!--<ContentPresenter Margin="2,0,2,0"/>-->
+                                        <TextBlock x:Name="contentSite"
+                                               HorizontalAlignment="Left" 
+                                               VerticalAlignment="Center"
+                                               Text="{TemplateBinding Content, Converter={StaticResource cComboBox_converter_content2string}}" 
+                                               Foreground="{TemplateBinding Foreground}" 
+                                               IsHitTestVisible="False"/>
+                                    </Border>
                                 </Grid>
                                 <ControlTemplate.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
@@ -143,7 +150,7 @@
                                         <Setter Property="Foreground" Value="Black" />
                                     </Trigger>
                                     <Trigger Property="IsSelected" Value="True">
-                                        <Setter Property="Foreground" Value="Red" />
+                                        <Setter Property="Foreground" Value="Crimson" />
                                     </Trigger>
                                 </ControlTemplate.Triggers>
                             </ControlTemplate>
